@@ -1,5 +1,9 @@
 2001-08-04  Martin Baulig  <baulig@suse.de>
 
+	* libgnome-init.[ch]: Renamed to gnome-init.[ch].
+
+2001-08-04  Martin Baulig  <baulig@suse.de>
+
 	* gnome-triggersP.h: Removed.
 
 	* libgnomeP.h: Removed.
